5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1798_2563.log
== TEST (2019-06-09 19:43:23) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))7
-- ERROR:
File "XXXX", line 4
    vet = array(eval(input()))7
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:43:29) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:50:51) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   # Zera contador de elementos pares
   n = 0
	for i in vet:
		if((i>5)and(i<7)):
			n = n + 1
	print(n)

-- ERROR:
File "XXXX", line 8
    for i in vet:
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:52:32) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   # Zera contador de elementos pares
   n = 0
	for i in vet:
      if ((i<7):
         n = n + 1 
   # No. de elementos pares
   print(n)


-- ERROR:
File "XXXX", line 8
    for i in vet:
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:53:44) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   # Zera contador de elementos pares
   n = 0
	for i in vet:
      if (i<7):
         n = n + 1 
   # No. de elementos pares
   print(n)


-- ERROR:
File "XXXX", line 8
    for i in vet:
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:53:50) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   # Zera contador de elementos pares
   n = 0
	for i in vet:
      if(i<7):
         n = n + 1 
   # No. de elementos pares
   print(n)


-- ERROR:
File "XXXX", line 8
    for i in vet:
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:12:35) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   # Zera contador de elementos pares
   n = 0
	for i in vet:
      if(i<7):
         n = n + 1 
   # No. de elementos pares
   print(n)


-- ERROR:
File "XXXX", line 8
    for i in vet:
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:12:52) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   # Zera contador de elementos pares
   n = 0
	for i in vet:
      if(i<=7):
         n = n + 1 
   # No. de elementos pares
   print(n)


-- ERROR:
File "XXXX", line 8
    for i in vet:
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:13:09) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   # Zera contador de elementos pares
   n = 0
	for i in vet:
      if(i<=7):
         n = n + 1 
   # No. de elementos pares
   print(n)


-- ERROR:
File "XXXX", line 8
    for i in vet:
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:13:25) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
   # Zera contador de elementos pares
   n = 0
	for i in vet:
		if(i<=7):
         n = n + 1 
   # No. de elementos pares
   print(n)


-- ERROR:
File "XXXX", line 8
    for i in vet:
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:13:45) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
	n = 0
	for i in vet:
		if(i<=7):
         n = n + 1 
   # No. de elementos pares
   print(n)


-- ERROR:
File "XXXX", line 9
    n = n + 1 
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:14:26) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
	n = 0
	for i in vet:
		if(i<=7):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:16:37) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
	n = 0
	for i in vet:
		if(i<=7):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:17:03) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
	n = 0
	for i in vet:
		if(i<=7):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:17:22) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 0):
	n = 0
	for i in vet:
		if(i<=7):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:18:30) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

n = 0
for i in vet:
	if(i<=7):
		n = n + 1 
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:19:52) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

n = 0
for i in vet:
	if(i<=7):
		n = n + 1 
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 20:24:04) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))
while (size(vet) > 1):
	n = 0
	for i in vet:
		if(i<=7):
			n = n + 1 
	print(n)


-- EXECUTION TIME:
458.505
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:15:18) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

n = 0
for i in vet:
	if((i<7)and(i>5)):
		n = n + 1 
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:15:57) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

n = 0
for i in vet:
	if((i<7)and(i>5)):
		n = n + 1 
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:16:07) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

n = 0
for i in vet:
	if((i<7)and(i>5)):
		n = n + 1 
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:16:29) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

n = 0
for i in vet:
	if((i<7)and(i>5)):
		n = n + 1 
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:16:52) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

n = 0
for i in vet:
	if((i<7)and(i>5)):
		n = n + 1 
print(n)


-- EXECUTION TIME:
0.995259
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:19:06) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

while(i<0):
	n = 0
	for i in vet:
		if((i<7)and(i>5)):
			n = n + 1 
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:21:57) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet)>1):
	n = 0
	for i in vet:
		if((i<7)and(i>5)):
			n = n + 1 
			print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:22:19) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet)>1):
	n = 0
	for i in vet:
		if((i<7)and(i>5)):
			n = n + 1 
			print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:23:11) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet)>1):
	n = 0
	for i in vet:
		if((i<7)and(i>5)):
			n = n + 1 
		print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:26:44) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet)>1):
	n = 0
	for i in vet:
		if((i<7)and(i>5)):
			n = n + 1 
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:27:02) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet)>1):
	n = 0
	for i in vet:
		if((i<7)and(i>5)):
			n = n + 1 
   print(n)


-- ERROR:
File "XXXX", line 11
    print(n)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:27:12) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet)>1):
	n = 0
	for i in vet:
		if((i<7)and(i>5)):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:31:19) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet)>1):
	n = 0
	for i in vet:
		if((i>=5)and(i<7)):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:36:12) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet)>1):
	n = 0
	for i in vet:
		if((i>=5)and(i<7)):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:37:04) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet)>1):
	n = 0
	for i in vet:
		if((i>=5)and(i<7)):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:37:04) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet)>1):
	n = 0
	for i in vet:
		if((i>=5)and(i<7)):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:39:43) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(size(vet)>1):
	n = 0
	for i in vet:
		if((i>=5)and(i<7)):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:41:51) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(size(vet)>1):
	n = 0
	for media in vet:
		if((media>=5)and(media<7)):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:42:01) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

while(size(vet)>1):
	n = 0
	for i in vet:
		if((i>=5)and(i<7)):
			n = n + 1 
	print(n)


-- EXECUTION TIME:
458.042
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:42:19) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(size(vet)>1):
	n = 0
	for media in vet:
		if((media>=5)and(media<7)):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:42:26) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(size(vet)>1):
	n = 0
	for media in vet:
		if((media>=5)and(media<7)):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:42:29) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(size(vet)>1):
	n = 0
	for media in vet:
		if((media>=5)and(media<7)):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:42:34) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(size(vet)>1):
	n = 0
	for media in vet:
		if((media>=5)and(media<7)):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:42:45) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(size(vet)>1):
	n = 0
	for media in vet:
		if((media>=5)and(media<7)):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:42:55) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(size(vet)>1):
	n = 0
	for media in vet:
		if((media>=5)and(media<7)):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:42:59) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(size(vet)>1):
	n = 0
	for media in vet:
		if((media>=5)and(media<7)):
			n = n + 1 
	print(n)


-- EXECUTION TIME:
0.0304458
-- ERROR:
Error response from daemon: Container 045ac7e7e6fed8664b831ca4edebf8fdb59aed368be07da233a43be30e0dd50f is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:43:03) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(size(vet)>1):
	n = 0
	for media in vet:
		if((media>=5)and(media<7)):
			n = n + 1 
	print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:43:07) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(size(vet)>1):
	n = 0
	for media in vet:
		if((media>=5)and(media<7)):
			n = n + 1 
	print(n)


-- EXECUTION TIME:
0.0360579
-- ERROR:
Error response from daemon: Container 045ac7e7e6fed8664b831ca4edebf8fdb59aed368be07da233a43be30e0dd50f is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:43:34) 
-- CODE:
from numpy import*
v = array(eval(input("medias finais: ")))
while (size(v) > 1):
	ap = 0
	
	for media in v: 
		if (media >= 5) and (media < 7):
			ap = ap + 1
			
	print(ap)


-- EXECUTION TIME:
0.030632
-- ERROR:
Error response from daemon: Container 045ac7e7e6fed8664b831ca4edebf8fdb59aed368be07da233a43be30e0dd50f is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:43:41) 
-- CODE:
from numpy import*
v = array(eval(input("medias finais: ")))
while (size(v) > 1):
	ap = 0
	
	for media in v: 
		if (media >= 5) and (media < 7):
			ap = ap + 1
			
	print(ap)


-- EXECUTION TIME:
0.034112
-- ERROR:
Error response from daemon: Container 045ac7e7e6fed8664b831ca4edebf8fdb59aed368be07da233a43be30e0dd50f is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 09:26:13) 
-- CODE:
from numpy import*
v = array(eval(input("medias finais: ")))
while (size(v) > 1):
	ap = 0
	
	for media in v: 
		if (media >= 5) and (media < 7):
			ap = ap + 1
			
	print(ap)
	v = array(eval(input("medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 09:26:53) 
-- CODE:
from numpy import*
v = array(eval(input("medias finais: ")))
while (size(v) > 1):
	ap = 0
	
	for media in v: 
		if (media >= 5) and (media < 7):
			ap = ap + 1
			
	print(ap)
	v = array(eval(input("medias finais: ")))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 09:27:02) 
-- CODE:
from numpy import*
v = array(eval(input("medias finais: ")))
while (size(v) > 1):
	ap = 0
	
	for media in v: 
		if (media >= 5) and (media < 7):
			ap = ap + 1
			
	print(ap)
	v = array(eval(input("medias finais: ")))
	


-- EXECUTION TIME:
0.974249
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
